--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 h1 {
-  font-size: 30px; 
+  font-size: 30px;
+}
+
+.control {
+  height: 415px;
+  width: 350px;
+  border: 1px solid pink;
+}
+
+.column1 {
+  width: 100px;
+  height: 100px;
+  outline: 1px solid blue;
+  display: inline-block;
+}
+
+p {
+  text-align: center;
 }
