--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
   outline: 3px solid white;
   display: inline-block;
   background-color: blue;
+  color: blue;
 }
 
 .section {
@@ -23,5 +24,5 @@ h1 {
 p {
   text-align: center;
   font-size: 30px;
-  color: blue;
+  color: green;
 }
