adding effect to only show 2 card values at a time

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ h1 {
   display: inline-block;
   background-color: blue;
   color: blue;
+  font-size: 60px;
+  text-align: center;
 }
 
 .section {
