--- a/style.css
+++ b/style.css
@@ -1,33 +1,43 @@
+body {
+  background-color: #344146;
+}
+
 h1 {
   font-size: 30px;
 }
 
 .control {
-  height: 415px;
-  width: 350px;
-  border: 1px solid pink;
+  margin-left: 12.5%;
+  display: flex;
+  flex-wrap: wrap;
+  height: 80vh;
+  width: 75%;
+  outline: 1px solid pink;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .column1 {
-  width: 100px;
-  height: 100px;
-  outline: 3px solid white;
-  display: inline-block;
-  background-color: blue;
-  color: blue;
+  width: 25%;
+  height: 33.333333%;
+  outline: 3px solid #D4D4D4;
+  background-color: #2CC990;
+  color: #2CC990;
   font-size: 60px;
   text-align: center;
 }
 
 .section {
-  border: 1px solid green;
+  height: 25%;
+  position: relative;
+  }
+
+p {
+  text-align: center;
+  font-size: 20px;
+  color: #D4D4D4;
 }
 
 .active {
-  color: white; 
-}
-p {
-  text-align: center;
-  font-size: 30px;
-  color: green;
+  color: white;
 }
