--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@ body {
 
 h1 {
   font-size: 30px;
+  color: #FFFFF7;
+  font-family:sans-serif; ;
+  margin-left: 10px;
 }
 
 
 .control {
-  margin-left: 12.5%;
+  margin-left: 5%;
   display: flex;
   flex-wrap: wrap;
-  height: 75vh;
-  width: 75%;
+  height: 80vh;
+  width: 90%;
   justify-content: space-between;
   align-items: center;
   background-image: url('images/starz.jpg');
@@ -34,15 +37,27 @@ h1 {
   justify-content: space-around;
 }
 
-.section {
-  height: 25%;
+.header {
+  display: flex;
+  background-color: rgb(15, 100, 248);
+  height: 30%;
+  width: 101%;
   position: relative;
+  top: -10px;
+  left: -5px; 
+  margin-bottom: 20px;
   }
 
-p {
-  text-align: center;
-  font-size: 20px;
-  color: #D4D4D4;
+.content {
+  width: 30%;
+  align-self: center;
+}
+
+.header p {
+  text-align: right;
+  font-size: 25px;
+  font-family: sans-serif;
+  color: white;
 }
 
 .active {
