--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ h1 {
   width: 101%;
   position: relative;
   top: -10px;
-  left: -5px;
+  left: -6px;
   margin-bottom: 20px;
-  outline: 2px solid white;
+  /*outline: 2px solid white;*/
+  border-bottom: 2px solid white;
   margin-right: 20px;
   justify-content: space-between;
   }
